# healthy_habits_tracker

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  dump.rdb  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py  urls.py
habits/: index.html  models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_time.py
nginx/: Dockerfile  nginx.conf
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_tg_chat_id.py
